<resources>
    <string name="app_name">News Demo Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_in">登录</string>
    <string name="login_account_tint">请输入账号</string>
    <string name="register">注册</string>
    <string name="or">Or</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">昵称：大猪哥  帐号：1388080800</string>
    <string name="nav_header_subtitle">普通成员  单机单登        》》</string>
    <string name="cy_imagebutton">侧页</string>
    <string name="sz_imagebutton">设置</string>
    <string name="ts_textView">提示</string>
    <string name="ts1_textView">管理</string>
    <string name="xnty_textView">虚拟体验︾</string>
    <string name="title_test">测试页面</string>
    <string name="title_Add">add</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>