<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/leftHeadHeight"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="8dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />


    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/ll_container"
        android:orientation="vertical">

    </LinearLayout>
    <com.example.newsdemoapplication.view.TitleDragView
        android:id="@+id/chapter_view"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:layout_height="0dp" />
    <com.example.newsdemoapplication.view.DragView
        android:id="@+id/drag_view"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:layout_height="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/ll_bottom"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_12"
            android:text="添加章节"/>
        <TextView
            android:id="@+id/btn_close_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_12"
            android:text="收起"/>
    </LinearLayout>
    <EditText
        android:visibility="gone"
        android:hint="输入框交互"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>